fix loading bar z-index

--- a/webui/css/main.css
+++ b/webui/css/main.css
@@ -4,6 +4,7 @@ body {
 
 #loading-bar .bar {
     top: 55px;
+    z-index: 999;
 }
 
 @-webkit-keyframes rotation {
